[gd_scene load_steps=29 format=3 uid="uid://cnndt6ajn1kvk"]

[ext_resource type="Script" uid="uid://dm7g1rsucdqrh" path="res://scripts/mushroom.gd" id="1_0bdi0"]
[ext_resource type="Texture2D" uid="uid://cei3fyvfjmrss" path="res://resources/enemys/mushroom/Run (32x32).png" id="1_b0s10"]
[ext_resource type="Texture2D" uid="uid://c4uamaignthnl" path="res://resources/enemys/mushroom/die.png" id="3_qxrkd"]
[ext_resource type="AudioStream" uid="uid://dwlo4yn2r8pap" path="res://resources/audio/mushroom-die.ogg" id="4_6c3h1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0bdi0"]
atlas = ExtResource("1_b0s10")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxrkd"]
atlas = ExtResource("1_b0s10")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3h1"]
atlas = ExtResource("1_b0s10")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4pa7"]
atlas = ExtResource("1_b0s10")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jekqn"]
atlas = ExtResource("1_b0s10")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rddh"]
atlas = ExtResource("1_b0s10")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v15d"]
atlas = ExtResource("1_b0s10")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rtbm"]
atlas = ExtResource("1_b0s10")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utliv"]
atlas = ExtResource("1_b0s10")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfc76"]
atlas = ExtResource("1_b0s10")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhg23"]
atlas = ExtResource("1_b0s10")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmpg3"]
atlas = ExtResource("1_b0s10")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15w21"]
atlas = ExtResource("1_b0s10")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne4m3"]
atlas = ExtResource("1_b0s10")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shet8"]
atlas = ExtResource("1_b0s10")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w611"]
atlas = ExtResource("1_b0s10")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vf25"]
atlas = ExtResource("3_qxrkd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_focxt"]
atlas = ExtResource("3_qxrkd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjmyf"]
atlas = ExtResource("3_qxrkd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xelu"]
atlas = ExtResource("3_qxrkd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq8is"]
atlas = ExtResource("3_qxrkd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qndc"]
atlas = ExtResource("3_qxrkd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3vf25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bdi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxrkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4pa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jekqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rddh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v15d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rtbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utliv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfc76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhg23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmpg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15w21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne4m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shet8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w611")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vf25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_focxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjmyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xelu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq8is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qndc")
}],
"loop": false,
"name": &"die",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_focxt"]
radius = 9.0
height = 28.0

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_0bdi0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3vf25")
animation = &"die"
autoplay = "default"

[node name="WorldCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_focxt")

[node name="EdgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-15, 0)
target_position = Vector2(0, 18)

[node name="EdgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 18)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HitboxCollisionShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_focxt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6c3h1")
volume_db = 2.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
